syntax = "proto3";

package models.v1;

message PasswordRecovery {
  string email = 1;
  string salt = 2;
  string name = 3;
}
